# hello-python-poetry-docker-trivy

./: pyproject.toml
